[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "langchain>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.2.1",
]

[tool.uv]
package = false

[tool.black]
line-length = 80
target-version = ['py39']

[tool.flake8]
max-line-length = 79
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "docformatter>=1.7.7",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pydocstyle>=6.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
